--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ https://templatemo.com/tm-585-barber-shop
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link click-scroll" href="#section_2">Our Story</a>
+                                <a class="nav-link click-scroll" href="#section_2">About Us</a>
                             </li>
 
                             <li class="nav-item">
@@ -64,7 +64,7 @@ https://templatemo.com/tm-585-barber-shop
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link click-scroll" href="#section_5">Contact</a>
+                                <a class="nav-link click-scroll" href="#section_5">Contact Us</a>
                             </li>
                         </ul>
                     </div>
