--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ https://templatemo.com/tm-585-barber-shop
 
                     <div class="position-sticky sidebar-sticky d-flex flex-column justify-content-center align-items-center">
                         <a class="navbar-brand" href="index.html">
-                            <img src="images/logo.jpg" class="logo-image img-fluid" align="">
+                            <img src="images/logo111.jpg" class="logo-image img-fluid" align="">
                         </a>
 
                         <ul class="nav flex-column">
