--- a/index.html
+++ b/index.html
@@ -449,11 +449,6 @@ https://templatemo.com/tm-585-barber-shop
                                     </ul>
                                 </div>
 
-                                 <div class="col-lg-12 col-12 mx-auto mt-5 pt-5">
-                                    <iframe class="google-map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d241.1388389387571!2d121.0610307!3d14.7565516!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397b0199b8fd6bb%3A0x560f0ac3b6bd4461!2sCountry%20Builders%20Bank%2C%20Inc.-%20Camarin!5e0!3m2!1sen!2sph!4v1705907738434!5m2!1sen!2sph" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"</iframe>
-                                </div>
-
-                                
                                 <div class="col-lg-5 col-12 contact-block-wrap mt-5 mt-lg-0 pt-4 pt-lg-0 mx-auto">
                                     <div class="contact-block">
                                         <h6 class="mb-0">
@@ -466,6 +461,11 @@ https://templatemo.com/tm-585-barber-shop
                                     </div>
                                 </div>
 
+                                   </div>
+
+                                <div class="col-lg-12 col-12 mx-auto mt-5 pt-5">
+                                    <iframe class="google-map" src="<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d241.1388389387571!2d121.0610307!3d14.7565516!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397b0199b8fd6bb%3A0x560f0ac3b6bd4461!2sCountry%20Builders%20Bank%2C%20Inc.-%20Camarin!5e0!3m2!1sen!2sph!4v1705908691062!5m2!1sen!2sph" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                                </div>
                                
                             </div>
                         </div>
