--- a/index.html
+++ b/index.html
@@ -395,7 +395,8 @@ https://templatemo.com/tm-585-barber-shop
                             <div class="row">   
 
                                 <div class="col-lg-8 col-12 mx-auto">
-                                    <h2 class="text-center">Say hello</h2>
+                                    <h2 class="text-center">Get in touch</h2>
+                                    <p class="text-center">Want to get in touch? We'd love to hear form you. Here's how you can reach us...</p>
                                 </div>
                             </div>
                         </div>
