--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ https://templatemo.com/tm-585-barber-shop
 
                     <div class="position-sticky sidebar-sticky d-flex flex-column justify-content-center align-items-center">
                         <a class="navbar-brand" href="index.html">
-                            <img src="images/rei_s_salon_and_barber-removebg-preview.png" class="logo-image img-fluid" align="">
+                            <img src="images/1-removebg-preview.png" class="logo-image img-fluid" align="">
                         </a>
 
                         <ul class="nav flex-column">
@@ -61,6 +61,10 @@ https://templatemo.com/tm-585-barber-shop
 
                             <li class="nav-item">
                                 <a class="nav-link click-scroll" href="#section_4">Price List</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link click-scroll" href="#section_6">Price List</a>
                             </li>
 
                             <li class="nav-item">
@@ -388,6 +392,63 @@ https://templatemo.com/tm-585-barber-shop
                         </div>
                     </section>
 
+                        <section class="about-section section-padding" id="section_6">
+                        <div class="container">
+                            <div class="row">
+
+                                <div class="col-lg-12 col-12 mx-auto">
+                                    <h2 class="mb-4">Our Partners</h2>
+
+                                    <h6 class="mb-5">Partners</h6>
+
+                                        <div class="col-lg-5 col-12 custom-block-bg-overlay-wrap me-lg-5 mb-5 mb-lg-0">
+                                            <img src="images/barber/hairstylist-1.jpg" class="custom-block-bg-overlay-image img-fluid" alt="">
+
+                                            <div class="team-info d-flex align-items-center flex-wrap">
+                                                <p class="mb-0">Riley</p>
+
+                                                <ul class="social-icon ms-auto">
+                                                    <li class="social-icon-item">
+                                                        <a href="#" class="social-icon-link bi-facebook">
+                                                        </a>
+                                                    </li>
+
+                                                    <li class="social-icon-item">
+                                                        <a href="#" class="social-icon-link bi-instagram">
+                                                        </a>
+                                                    </li>
+
+                                                    <li class="social-icon-item">
+                                                        <a href="#" class="social-icon-link bi-whatsapp">
+                                                        </a>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                        </div>
+
+                                        <div class="col-lg-5 col-12 custom-block-bg-overlay-wrap mt-4 mt-lg-0 mb-5 mb-lg-0">
+                                            <img src="images/barber/hairstylist-2.jpg" class="custom-block-bg-overlay-image img-fluid" alt="">
+
+                                            <div class="team-info d-flex align-items-center flex-wrap">
+                                                <p class="mb-0">Winter</p>
+
+                                                <ul class="social-icon ms-auto">
+                                                    <li class="social-icon-item">
+                                                        <a href="#" class="social-icon-link bi-facebook">
+                                                        </a>
+                                                    </li>
+
+                                                    <li class="social-icon-item">
+                                                        <a href="#" class="social-icon-link bi-instagram">
+                                                        </a>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </section>
 
                 <section class="contact-section" id="section_5">
                     <div class="section-padding section-bg">
@@ -396,7 +457,7 @@ https://templatemo.com/tm-585-barber-shop
 
                                 <div class="col-lg-8 col-12 mx-auto">
                                     <h2 class="text-center">Get in touch</h2>
-                                    <p class="text-center">Want to get in touch? We'd love to hear form you. Here's how you can reach us...</p>
+                                    <p class="text-center">Want to get in touch? We'd love to hear from you. Here's how you can reach us...</p>
                                 </div>
                             </div>
                         </div>
