--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ https://templatemo.com/tm-585-barber-shop
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link click-scroll" href="#section_6">Price List</a>
+                                <a class="nav-link click-scroll" href="section_6">Partners</a>
                             </li>
 
                             <li class="nav-item">
@@ -392,64 +392,43 @@ https://templatemo.com/tm-585-barber-shop
                         </div>
                     </section>
 
-                        <section class="about-section section-padding" id="section_6">
+                   <section class="partners-section section-padding" id="section_6">
+                    <div class="section overlay"></div>
+                    <div class="container">
+                        <div class="row">
+
                         <div class="container">
                             <div class="row">
 
-                                <div class="col-lg-12 col-12 mx-auto">
-                                    <h2 class="mb-4">Our Partners</h2>
-
-                                    <h6 class="mb-5">Partners</h6>
-
-                                        <div class="col-lg-5 col-12 custom-block-bg-overlay-wrap me-lg-5 mb-5 mb-lg-0">
-                                            <img src="images/barber/hairstylist-1.jpg" class="custom-block-bg-overlay-image img-fluid" alt="">
-
-                                            <div class="team-info d-flex align-items-center flex-wrap">
-                                                <p class="mb-0">Riley</p>
-
-                                                <ul class="social-icon ms-auto">
-                                                    <li class="social-icon-item">
-                                                        <a href="#" class="social-icon-link bi-facebook">
-                                                        </a>
-                                                    </li>
-
-                                                    <li class="social-icon-item">
-                                                        <a href="#" class="social-icon-link bi-instagram">
-                                                        </a>
-                                                    </li>
-
-                                                    <li class="social-icon-item">
-                                                        <a href="#" class="social-icon-link bi-whatsapp">
-                                                        </a>
-                                                    </li>
-                                                </ul>
-                                            </div>
-                                        </div>
-
-                                        <div class="col-lg-5 col-12 custom-block-bg-overlay-wrap mt-4 mt-lg-0 mb-5 mb-lg-0">
-                                            <img src="images/barber/hairstylist-2.jpg" class="custom-block-bg-overlay-image img-fluid" alt="">
-
-                                            <div class="team-info d-flex align-items-center flex-wrap">
-                                                <p class="mb-0">Winter</p>
-
-                                                <ul class="social-icon ms-auto">
-                                                    <li class="social-icon-item">
-                                                        <a href="#" class="social-icon-link bi-facebook">
-                                                        </a>
-                                                    </li>
-
-                                                    <li class="social-icon-item">
-                                                        <a href="#" class="social-icon-link bi-instagram">
-                                                        </a>
-                                                    </li>
-                                                </ul>
-                                            </div>
+                                <div class="col-lg-10 col-12 mx-auto">
+                                    <h2 class="mb-3">Partners</h2>
+                                <div class="rowsss">
+                                    <img src="images/bremod.png">
+                                </div>
+                                <div class="rowsss">
+                                    <img src="images/keratin.png">
+                                </div>
+                                <div class="rowsss">
+                                    <img src="images/phillips.png">
                                 </div>
 
                             </div>
                         </div>
                     </section>
 
+                <section class="contact-section" id="section_5">
+                    <div class="section-padding section-bg">
+                        <div class="container">
+                            <div class="row">   
+
+                                <div class="col-lg-8 col-12 mx-auto">
+                                    <h2 class="text-center">Say hello</h2>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    
                 <section class="contact-section" id="section_5">
                     <div class="section-padding section-bg">
                         <div class="container">
